--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^6.4.1",
-    "expo": "~53.0.22",
+  "@react-navigation/native": "^6.1.18",
+  "@react-navigation/native-stack": "^6.11.0",
+  "@react-navigation/stack": "^6.4.1",
+  "expo": "~53.0.23",
     "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1"
+  "react": "19.0.0",
+  "react-native": "0.79.6",
+  "react-native-gesture-handler": "~2.24.0",
+  "react-native-safe-area-context": "5.4.0",
+  "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
